# Face_Regognition_Login_Page

./: .gitignore  README.md
backend/: .env  database.db  init_db.py  main.py  pyproject.toml  requirements.txt  run_test_client.py  test_api.py
backend/chroma_db/: chroma.sqlite3
backend/core/: auth.py  config.py  security.py
backend/models/: login.py  register.py
backend/routers/: login.py  logout.py  register.py
backend/schemas/: login.py  register.py
backend/services/: face_service.py  model.py
frontend/: requirements.txt
frontend/src/: App.jsx  index.css
frontend/src/pages/: Home.jsx  Login.jsx  Register.jsx
frontend/src/utils/: api.js
